src/objects/DocuSign_Auth__mdt/DocuSign_Auth__mdt.object-meta.xml
<CustomObject>
    <label>DocuSign Auth</label>
    <pluralLabel>DocuSign Auth</pluralLabel>
</CustomObject>