src/objects/DocuSign_Auth__mdt/fields/DocuSign_User_ID__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_User_ID__c</fullName>
    <description>User ID - comes from My Account Information in DocuSign</description>
    <label>DocuSign User ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>