src/objects/DocuSign_Auth__mdt/fields/Request_Auth_Domain__c.field-meta.xml
<CustomField>
    <fullName>Request_Auth_Domain__c</fullName>
    <label>Request Auth Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>