src/objects/DocuSign_Auth__mdt/fields/Request_Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Request_Integration_Key__c</fullName>
    <description>Integration Key - comes from Apps and Integration Keys in DocuSign</description>
    <label>Request Integration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>