src/objects/DocuSign_Auth__mdt/fields/Request_Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Request_Private_Key__c</fullName>
    <description>Private Key - comes from Apps and Integration Keys in DocuSign 
Should NOT include `----BEGIN RSA PRIVATE KEY----` and `----END RSA PRIVATE KEY----`</description>
    <label>Request Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>