src/objects/DocuSign_Auth__mdt/fields/Request_Scope__c.field-meta.xml
<CustomField>
    <fullName>Request_Scope__c</fullName>
    <label>Request Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>